test/invalid/baseline/stray-slash.txt
Syntax error at line 2 in stray-slash.webidl:
/ This is not.
^ Unrecognised tokens
